@@ -42,16 +42,12 @@ enable_acme_flow = True
 certificate_authority = pebble
 certificate_authority_directory = https://0.0.0.0:14000/dir
 certificate_authority_testing = True
-# certificate_authority = letsencrypt-v2-staging
-# certificate_authority_directory = https://acme-staging-v02.api.letsencrypt.org/directory
-# certificate_authority_testing = True  # needed for ssl
-
 certificate_authority_protocol = acme-v2
 # 'https://letsencrypt.org/documents/LE-SA-v1.0.1-July-27-2015.pdf'
 certificate_authority_agreement = None
 
 # what additional CAs should be enabled
-certificate_authorities_enable = pebble, letsencrypt-v2, letsencrypt-v2-staging
+certificate_authorities_enable = pebble
 
 enable_redis = True
 redis.url =  redis://127.0.0.1:6379/9
